2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* SystemDropShadowChromeTest.cs: Expanded Drawing test.

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChromeTest.cs: Added or expanded some tests.
	* SystemDropShadowChromeTest.cs: Added.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarBrushConverterTest.cs: Added.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonChromeTest.cs: Expanded Measure test.
	
2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonChromeTest.cs: Expanded Measure test.