@@ -1,3 +1,7 @@
+2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ScrollChromeTest.cs: Expanded Drawing test.
+
 2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* SystemDropShadowChromeTest.cs: Expanded Drawing test.
